# Mila

./: package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/libs/certifi-2026.2.25.dist-info/: RECORD
src-tauri/libs/cffi-2.0.0.dist-info/: RECORD
src-tauri/libs/charset_normalizer-3.4.7.dist-info/: RECORD
src-tauri/libs/idna-3.11.dist-info/: RECORD
src-tauri/libs/pycparser-2.23.dist-info/: RECORD
src-tauri/libs/requests-2.32.5.dist-info/: RECORD
src-tauri/libs/srt-3.5.3.dist-info/: RECORD
src-tauri/libs/tqdm-4.67.3.dist-info/: RECORD
src-tauri/libs/urllib3-2.6.3.dist-info/: RECORD
src-tauri/libs/vosk-0.3.44.dist-info/: RECORD
src-tauri/libs/websockets-15.0.1.dist-info/: RECORD
src-tauri/src/: lib.rs
src-tauri/src/modules/: audio.rs  audio_engine.rs  commands.rs  mod.rs  stt_engine.rs  wake_word.rs
src/app/: page.tsx
