[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
dotenvy = "0.15.7"
tauri-plugin-shell = "2.3.5"
cpal = "0.17.1"
whisper-rs = "0.16.0"
tokio = { version = "1.51.1", features = ["full"] }
anyhow = "1.0.102"
hound = "3.5.1"
vosk = "0.3.1"
